# fundamentals

./: .env  .gitignore  .pre-commit-config.yaml  README.md  compute_metrics.py  fund_cli.py  macrotrends_scraper.py  pyproject.toml  server.py  test_metrics.py  wacc.py
.cursor/: mcp.json
.cursor/rules/: general.mdc  macrotrends_reference.mdc  mcp-tool-error-logs.mdc  styling.mdc  tool-implementation.mdc
dev/edgartools_explore/: edgartools-example.ipynb  edgartools-example.py
dev/sector_correlation/: correlation.ipynb  correlation.py
dev/stockdex/: README.md  stockdex_v0.ipynb  stockdex_v0.py  stockdex_v1.ipynb  stockdex_v1.py
dev/yf_metric_calculator/: compute_metrics.py  eda.ipynb  test_metrics.py
docs/edgartools/: edgartools-example.py
docs/notebooks/: dcf.ipynb  sp500_volatility_and_returns.ipynb  volatility_and_returns.ipynb
fundamentals/: __init__.py  cli.py  server.py  tools.py
fundamentals/templates/: template.html
fundamentals/utility/: company_info.py  dcf.py  diagnose_cursor_mcp.py  general.py  get_company_info.py  get_sector_industry_list.py  logger.py  macrotrends_scraper.py  parsing.py  simulate_market.py  slug_overrides.json  swap_mdc.py  wacc.py  zillow_housing.py
housing_data/city_data/: usa_housing_inflections.json
scripts/: diagnose_cursor_mcp.py  fund_cli.py  swap_mdc.py
scripts/utility/: diagnose_cursor_mcp.py  get_sector_industry_list.py  gics_correlation.py  simulate_market.py  swap_mdc.py
server_utils/: __init__.py  company_info.py  tools.py
tests/: test_cli.py  test_company_info.py  test_dcf.py  test_financial_pipeline.py  test_integration.py  test_macrotrends.py  test_wacc.py
tests/cli/: test_company_info.py  test_macrotrends.py  test_sector_industry_list.py
