[project]
name = "fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edgartools>=4.0.3",
    "fastmcp>=2.3.4",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "pip>=25.1.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]
