[project]
name = "fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "edgartools>=4.0.3",
    "fastmcp>=2.3.4",
    "ipython>=9.2.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pip>=25.1.1",
    "plotly>=6.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-tornasync>=0.6.0.post2",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "yfinance>=0.2.61",
]
