[project]
name = "fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "edgartools>=4.0.3",
    "fastmcp>=2.3.4",
    "ipython>=9.2.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pip>=25.1.1",
    "plotly>=6.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-tornasync>=0.6.0.post2",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "yfinance>=0.2.61",
    "ruff>=0.3.3",
    "pre-commit>=3.6.2",
    "nbstripout>=0.8.1",
    "black>=25.1.0",
    "aiohttp>=3.11.18",
    "bs4>=0.0.2",
    "duckdb>=1.3.0",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = ["N806", "RUF001", "N803", "PLR0913", "PLR2004", "RUF013",
            "PLR0912", "PLR0915", "B006", "E501", "UP006", "UP007", "UP035"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# not in src format ignore prompts/ folder
[tool.setuptools.packages.find]
where = ["."]
include = ["fundamentals"]
exclude = []
namespaces = false

[project.scripts]
fund = "fundamentals.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
